@startuml

title __VIEWS's Class Diagram__\n

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Views {
      class Menu {
          {static} - QUIT_KEY : String
          - menuItems : SortedMap<String, MenuItem>
          - continueLoop : boolean
          - title : String
          + Menu()
          + doLoop()
          - readInput()
          - getMenuItemFor()
          - printMenu()
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Views {
      class MenuItem {
          - name : String
          + MenuItem()
          + execute()
          + getName()
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Views {
      class ViewTools {
          {static} - ANSI_CLS : String
          {static} - ANSI_HOME : String
          - ViewTools()
          {static} + readInput()
          {static} - getShortened()
          {static} + readInput()
          {static} + clearScreen()
          {static} + waitForReturn()
          {static} + waitForStar()
          {static} + output()
          {static} - outputWithoutNewLine()
          {static} + separator()
          {static} + separator()
          {static} + newLine()
          {static} + outputHeader()
          {static} + readBoolean()
          {static} + readLong()
          {static} + readUuid()
      }
    }
  }
  

  Menu o-- MenuItem : quitItem
  MenuItem o-- Aufgabe : aufgabe


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
